--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
+.env.backup
+.env.production
+.phpactor.json
+auth.json
+/.fleet
+/.idea
+/.nova
+/.vscode
+/.zed
+
+
 ### Laravel ###
 /vendor/
 node_modules/
