--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=EvolvifyTesting
 APP_ENV=testing
-APP_KEY=base64:testingKeyHere=
+APP_KEY=base64:wIzu2aHkvNNP0KZ2OtdJp86NHpIAtk2G7KmrPiSQYE4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
