--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: '8.1'
           extensions: mbstring, bcmath, intl
           coverage: none
 
@@ -39,8 +39,11 @@ jobs:
       - name: Copy .env.testing
         run: cp .env.testing .env
 
+      - name: Clear Config Cache
+        run: php artisan config:clear
+
       - name: Generate Application Key
-        run: php artisan key:generate
+        run: php artisan key:generate --env=testing
 
       - name: Run Migrations
         run: php artisan migrate --env=testing --force
