--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Project Workflow
+name: CI Workflow
 
 on:
   push:
@@ -11,22 +11,10 @@ on:
       - develop
 
 jobs:
-  create:
-    name: Create Environment
+  code_analysis:
+    name: Code analysis with PHPStan
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
 
-      - name: Create necessary files or placeholders
-        run: |
-          echo "Creating necessary environment files..."
-          cp .env.example .env.testing || echo "Env file created"
-
-  setup:
-    name: Setup Dependencies
-    runs-on: ubuntu-latest
-    needs: create
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -34,50 +22,46 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
-          extensions: mbstring, bcmath, intl, sqlite
-          coverage: none
+          php-version: 8.3
+          tools: composer
 
-      - name: Install Composer Dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest --ansi
+      - name: Install Dependencies
+        run: composer install --no-progress --no-suggest --prefer-dist
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+      - name: Run PHPStan
+        run: ./vendor/bin/phpstan analyse
 
-      - name: Install Node.js Dependencies
-        run: npm install
-
-      - name: Build Frontend Assets
-        run: npm run build
-
-      - name: Setup Environment
-        run: |
-          echo "Setting up environment..."
-          cp .env.testing .env
-          php artisan key:generate --env=testing
-          php artisan migrate --env=testing --force
-
-  test:
-    name: Run Tests
+  testing:
+    name: Run Tests with Pest
     runs-on: ubuntu-latest
-    needs: setup
+    needs: code_analysis
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Run Tests with Pest
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          tools: composer
+
+      - name: Install Dependencies
+        run: composer install --no-progress --no-suggest --prefer-dist
+
+      - name: Prepare Database
+        run: |
+          php artisan migrate --env=testing --force
+          php artisan db:seed --env=testing --force
+
+      - name: Run Pest
         run: ./vendor/bin/pest
 
   deploy:
-    name: Deploy Project
+    name: Deploy on server
     runs-on: ubuntu-latest
-    needs: test
-    if: success() # Condizione per eseguire il job solo se il job "test" ha successo
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    needs: [ code_analysis, testing ]
 
-      - name: Show Deploy Message
-        run: echo "Deploy step executed! Add Forge or other deployment tools here."
+    steps:
+      - name: Deploy Placeholder
+        run: echo "Deploying project..."
