--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "husky": "^8.0.0",
         "laravel-vite-plugin": "^1.0",
+        "lint-staged": "^15.2.11",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
