--- a/.env.testing
+++ b/.env.testing
@@ -5,9 +5,10 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
+DB_DATABASE=database/testing.sqlite
 
 CACHE_DRIVER=array
 QUEUE_CONNECTION=sync
