--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "lodash": "^4.17.21"
     }
 }
