--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "nunomaduro/larastan": "^3.0",
     "pestphp/pest": "^3.7",
     "pestphp/pest-plugin-laravel": "^3.0",
-    "phpstan/phpstan": "^2.0"
+    "phpstan/phpstan": "^2.0",
+    "spatie/laravel-ray": "^1.39"
   },
   "autoload": {
     "psr-4": {
