--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "laravel/tinker": "^2.9",
     "opcodesio/log-viewer": "^3.12",
     "predis/predis": "^2.3",
+    "spatie/laravel-settings": "^3.4",
     "spatie/laravel-sluggable": "^3.7"
   },
   "require-dev": {
