--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.9",
+        "@tailwindcss/typography": "^0.5.15",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
@@ -14,6 +16,7 @@
         "laravel-vite-plugin": "^1.0",
         "lint-staged": "^15.2.11",
         "postcss": "^8.4.49",
+        "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
     },
