Added control of variables in env files to pre-commit

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,8 @@ parameters:
     paths:
         - app/
         - database/
+    excludePaths:
+        - _ide_helper.php
     level: max
     ignoreErrors:
         - '#Class App\\Models\\Post uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types#'
