--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,19 @@
   "license": "MIT",
   "require": {
     "php": "^8.3",
+    "ext-pdo": "*",
     "blade-ui-kit/blade-heroicons": "^2.5",
     "blade-ui-kit/blade-icons": "^1.7",
     "blade-ui-kit/blade-ui-kit": "^0.6.4",
     "filament/filament": "^3.2",
+    "intervention/image": "^3.10",
     "laravel/framework": "^11.31",
+    "laravel/horizon": "^5.30",
     "laravel/tinker": "^2.9",
     "opcodesio/log-viewer": "^3.12",
     "predis/predis": "^2.3",
     "spatie/laravel-settings": "^3.4",
-    "spatie/laravel-sluggable": "^3.7",
-    "ext-pdo": "*"
+    "spatie/laravel-sluggable": "^3.7"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.14",
