--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": "^8.3",
     "ext-pdo": "*",
+    "artesaos/seotools": "^1.3",
     "blade-ui-kit/blade-heroicons": "^2.5",
     "blade-ui-kit/blade-icons": "^1.7",
     "blade-ui-kit/blade-ui-kit": "^0.6.4",
