--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,23 @@
 {
   "$schema": "https://getcomposer.org/schema.json",
-  "name": "laravel/laravel",
+  "name": "danielemontecchi/site",
+  "version": "1.0.0-beta",
   "type": "project",
-  "description": "The skeleton application for the Laravel framework.",
+  "description": "A Laravel project for a personal blog and portfolio.",
   "keywords": [
     "laravel",
-    "framework"
+    "blog",
+    "portfolio",
+    "seo",
+    "analytics"
   ],
   "license": "MIT",
+  "authors": [
+    {
+      "name": "Daniele Montecchi",
+      "email": "daniele@montecchi.me"
+    }
+  ],
   "require": {
     "php": "^8.3",
     "ext-pdo": "*",
@@ -23,6 +33,7 @@
     "laravel/tinker": "^2.9",
     "opcodesio/log-viewer": "^3.12",
     "predis/predis": "^2.3",
+    "sentry/sentry-laravel": "^4.10",
     "spatie/laravel-analytics": "^5.5",
     "spatie/laravel-sluggable": "^3.7"
   },
@@ -36,7 +47,7 @@
     "laravel/sail": "^1.26",
     "mockery/mockery": "^1.6",
     "nunomaduro/collision": "^8.1",
-    "nunomaduro/larastan": "^3.0",
+    "larastan/larastan": "^3.0",
     "pestphp/pest": "^3.7",
     "pestphp/pest-plugin-laravel": "^3.0",
     "phpstan/phpstan": "^2.0",
