--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "laravel/framework": "^11.31",
     "laravel/horizon": "^5.30",
     "laravel/tinker": "^2.9",
+    "livewire/livewire": "^3.5",
     "opcodesio/log-viewer": "^3.12",
     "predis/predis": "^2.3",
     "sentry/sentry-laravel": "^4.10",
