--- a/composer.json
+++ b/composer.json
@@ -1,112 +1,116 @@
 {
-  "$schema": "https://getcomposer.org/schema.json",
-  "name": "danielemontecchi/site",
-  "version": "1.0.0-beta",
-  "type": "project",
-  "description": "A Laravel project for a personal blog and portfolio.",
-  "keywords": [
-    "laravel",
-    "blog",
-    "portfolio",
-    "seo",
-    "analytics"
-  ],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Daniele Montecchi",
-      "email": "daniele@montecchi.me"
-    }
-  ],
-  "require": {
-    "php": "^8.3",
-    "ext-pdo": "*",
-    "artesaos/seotools": "^1.3",
-    "blade-ui-kit/blade-heroicons": "^2.5",
-    "blade-ui-kit/blade-icons": "^1.7",
-    "blade-ui-kit/blade-ui-kit": "^0.6.4",
-    "filament/filament": "^3.2",
-    "filament/spatie-laravel-settings-plugin": "^3.2",
-    "intervention/image": "^3.10",
-    "laravel/framework": "^11.31",
-    "laravel/horizon": "^5.30",
-    "laravel/tinker": "^2.9",
-    "livewire/livewire": "^3.5",
-    "opcodesio/log-viewer": "^3.12",
-    "predis/predis": "^2.3",
-    "sentry/sentry-laravel": "^4.10",
-    "spatie/laravel-analytics": "^5.5",
-    "spatie/laravel-sluggable": "^3.7"
-  },
-  "require-dev": {
-    "barryvdh/laravel-debugbar": "^3.14",
-    "barryvdh/laravel-ide-helper": "^3.3",
-    "fakerphp/faker": "^1.23",
-    "friendsofphp/php-cs-fixer": "^3.65",
-    "larastan/larastan": "^3.0",
-    "laravel/pail": "^1.1",
-    "laravel/pint": "^1.13",
-    "laravel/sail": "^1.26",
-    "mockery/mockery": "^1.6",
-    "nunomaduro/collision": "^8.1",
-    "peckphp/peck": "^0.1.1",
-    "pestphp/pest": "^3.7",
-    "pestphp/pest-plugin-laravel": "^3.0",
-    "phpstan/phpstan": "^2.0",
-    "spatie/laravel-ray": "^1.39"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "app/",
-      "Database\\Factories\\": "database/factories/",
-      "Database\\Seeders\\": "database/seeders/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Tests\\": "tests/"
-    }
-  },
-  "scripts": {
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover --ansi",
-      "@php artisan filament:upgrade"
+    "$schema": "https://getcomposer.org/schema.json",
+    "name": "danielemontecchi/site",
+    "version": "1.0.0-beta",
+    "type": "project",
+    "description": "A Laravel project for a personal blog and portfolio.",
+    "keywords": [
+        "laravel",
+        "blog",
+        "portfolio",
+        "seo",
+        "analytics"
     ],
-    "post-update-cmd": [
-      "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
-      "@php artisan ide-helper:generate",
-      "@php artisan ide-helper:meta"
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Daniele Montecchi",
+            "email": "daniele@montecchi.me"
+        }
     ],
-    "post-root-package-install": [
-      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-    ],
-    "post-create-project-cmd": [
-      "@php artisan key:generate --ansi",
-      "@php -r \"file_exists('database/testing.sqlite') || touch('database/testing.sqlite');\"",
-      "@php artisan migrate --graceful --ansi"
-    ],
-    "dev": [
-      "Composer\\Config::disableProcessTimeout",
-      "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
-    ]
-  },
-  "extra": {
-    "laravel": {
-      "dont-discover": [
-        "barryvdh/laravel-ide-helper"
-      ]
-    }
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "allow-plugins": {
-      "pestphp/pest-plugin": true,
-      "php-http/discovery": true
-    }
-  },
-  "minimum-stability": "stable",
-  "prefer-stable": true
+    "require": {
+        "php": "^8.3",
+        "ext-pdo": "*",
+        "artesaos/seotools": "^1.3",
+        "blade-ui-kit/blade-heroicons": "^2.5",
+        "blade-ui-kit/blade-icons": "^1.7",
+        "blade-ui-kit/blade-ui-kit": "^0.6.4",
+        "filament/filament": "^3.2",
+        "filament/spatie-laravel-settings-plugin": "^3.2",
+        "intervention/image": "^3.10",
+        "laravel/framework": "^11.31",
+        "laravel/horizon": "^5.30",
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
+        "opcodesio/log-viewer": "^3.12",
+        "predis/predis": "^2.3",
+        "sentry/sentry-laravel": "^4.10",
+        "spatie/laravel-analytics": "^5.5",
+        "spatie/laravel-sluggable": "^3.7"
+    },
+    "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
+        "barryvdh/laravel-ide-helper": "^3.3",
+        "fakerphp/faker": "^1.23",
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "larastan/larastan": "^3.0",
+        "laravel/pail": "^1.1",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.1",
+        "peckphp/peck": "^0.1.1",
+        "pestphp/pest": "^3.7",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "phpstan/phpstan": "^2.0",
+        "spatie/laravel-ray": "^1.39"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi",
+            "@php -r \"file_exists('database/testing.sqlite') || touch('database/testing.sqlite');\"",
+            "@php artisan migrate --graceful --ansi"
+        ],
+        "dev": [
+            "Composer\\Config::disableProcessTimeout",
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+        ],
+        "test": [
+            "npm run build",
+            "pest"
+        ]
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
