--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -25,6 +25,9 @@ jobs:
           php-version: 8.3
           tools: composer
 
+      - name: Create DB
+        run: touch database/database.sqlite
+
       - name: Install Dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
 
@@ -48,6 +51,9 @@ jobs:
         with:
           php-version: 8.3
           tools: composer
+
+      - name: Create DB
+        run: touch database/database.sqlite
 
       - name: Install Dependencies
         run: composer install --no-progress --no-suggest --prefer-dist
