--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "prepare": "husky install"
-    },
-    "devDependencies": {
-        "@tailwindcss/forms": "^0.5.9",
-        "@tailwindcss/typography": "^0.5.15",
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "husky": "^8.0.0",
-        "laravel-vite-plugin": "^1.0",
-        "lint-staged": "^15.2.11",
-        "postcss": "^8.4.49",
-        "postcss-nesting": "^13.0.1",
-        "tailwindcss": "^3.4.17",
-        "vite": "^6.0"
-    },
-    "dependencies": {
-        "alpinejs": "^3.14.8",
-        "lodash": "^4.17.21"
-    }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "vite build",
+		"dev": "vite",
+		"prepare": "husky || true"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"autoprefixer": "^10.4.20",
+		"axios": "^1.7.9",
+		"concurrently": "^9.1.2",
+		"husky": "^9.1.7",
+		"laravel-vite-plugin": "^1.2.0",
+		"lint-staged": "^15.4.3",
+		"postcss": "^8.5.1",
+		"postcss-nesting": "^13.0.1",
+		"tailwindcss": "^3.4.17",
+		"vite": "^6.1.0"
+	},
+	"dependencies": {
+		"alpinejs": "^3.14.8",
+		"lodash": "^4.17.21"
+	}
 }
