--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"build": "vite build",
 		"dev": "vite",
-		"prepare": "husky || true"
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.10",
